Add Docker files for develop

--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,9 @@ verify_ssl = true
 [dev-packages]
 jupyter = "*"
 jupyterlab = "*"
+pillow = "*"
+matplotlib = "*"
+uvtextureconverter = {editable = true,path = "."}
 
 [packages]
 
