--- a/setup.cfg
+++ b/setup.cfg
@@ -3,14 +3,15 @@ name = UVTextureConverter
 version = 1.0.0
 description = To convert atlas texuture (defined in Densepose) to normal texture (defined in SMPL), and vice versa.
 author = Kubo Shizuma
-lrl = https://github.com/kuboshizuma/UVTextureConverter
+url = https://github.com/kuboshizuma/UVTextureConverter
 
 [options]
 packages = find:
 include_package_data = True
 install_requires =
+  numpy
+  scipy
   tqdm
-  pathlib
 
 [options.packages.find]
 exclude =
