--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = UVTextureConverter
 version = 1.0.0
 description = To convert atlas texuture (defined in Densepose) to normal texture (defined in SMPL), and vice versa.
-author = Kubo Shizuma
+author = Shizuma Kubo
 url = https://github.com/kuboshizuma/UVTextureConverter
 
 [options]
@@ -18,3 +18,11 @@ exclude =
   docs
   input
   notebook
+
+[isort]
+multi_line_output = 5
+
+[flake8]
+max-line-length = 140
+exclude =
+  UVTextureConverter/__init__.py
