--- a/.github/workflows/test_master.yml
+++ b/.github/workflows/test_master.yml
@@ -1,13 +1,11 @@
-name: Test
+name: Test@master
 on:
   workflow_dispatch:
     branches:
       - '**'
   push:
     branches:
-      - '**'
-      - '!master'
-      - '!develop'
+      - 'master'
 
 jobs:
   test:
